--- a/config/corne.conf
+++ b/config/corne.conf
@@ -2,5 +2,6 @@
 # CONFIG_ZMK_RGB_UNDERGLOW=y
 # CONFIG_WS2812_STRIP=y
 CONFIG_ZMK_POINTING=y
+CONFIG_BT_CTLR_PHY_2M=n 
 # Uncomment the following line to enable the Corne OLED Display
 # CONFIG_ZMK_DISPLAY=y
